--- a/src/styles/Exercise.css
+++ b/src/styles/Exercise.css
@@ -1,6 +1,8 @@
 .exercise__top {
   margin-bottom: 30px;
   text-align: center;
+  margin-top: -60px;
+  justify-content: start;
 }
 .exercise__top h2 {
   font-size: 2.4rem;
